temp/objects/Licensing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Insurance Company, Reinsurer, Agency, Broker, MGA, Surplus Lines Broker, Risk Retention Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licensing</relationshipLabel>
        <relationshipName>Licensing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_State__c</fullName>
        <description>State in which the company is admitted</description>
        <inlineHelpText>State in which the company is admitted</inlineHelpText>
        <label>Authorized State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_State_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOC_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOC Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOC_Type__c</fullName>
        <label>LOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>New York Compromise</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>California Compromise</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Domicile__c</fullName>
        <label>State of Domicile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama - AL</fullName>
                </value>
                <value>
                    <fullName>Alaska - AK</fullName>
                </value>
                <value>
                    <fullName>Arizona - AZ</fullName>
                </value>
                <value>
                    <fullName>Arkansas - AR</fullName>
                </value>
                <value>
                    <fullName>California - CA</fullName>
                </value>
                <value>
                    <fullName>Colorado - CO</fullName>
                </value>
                <value>
                    <fullName>Connecticut - CT</fullName>
                </value>
                <value>
                    <fullName>Delaware - DE</fullName>
                </value>
                <value>
                    <fullName>Florida - FL</fullName>
                </value>
                <value>
                    <fullName>Georgia - GA</fullName>
                </value>
                <value>
                    <fullName>Hawaii - HI</fullName>
                </value>
                <value>
                    <fullName>Idaho - ID</fullName>
                </value>
                <value>
                    <fullName>Illinois - IL</fullName>
                </value>
                <value>
                    <fullName>Indiana - IN</fullName>
                </value>
                <value>
                    <fullName>Iowa - IA</fullName>
                </value>
                <value>
                    <fullName>Kansas - KS</fullName>
                </value>
                <value>
                    <fullName>Kentucky - KY</fullName>
                </value>
                <value>
                    <fullName>Louisiana - LA</fullName>
                </value>
                <value>
                    <fullName>Maine - ME</fullName>
                </value>
                <value>
                    <fullName>Maryland - MD</fullName>
                </value>
                <value>
                    <fullName>Massachusetts - MA</fullName>
                </value>
                <value>
                    <fullName>Michigan - MI</fullName>
                </value>
                <value>
                    <fullName>Minnesota - MN</fullName>
                </value>
                <value>
                    <fullName>Mississippi - MS</fullName>
                </value>
                <value>
                    <fullName>Missouri - MO</fullName>
                </value>
                <value>
                    <fullName>Montana - MT</fullName>
                </value>
                <value>
                    <fullName>Nebraska - NE</fullName>
                </value>
                <value>
                    <fullName>Nevada - NV</fullName>
                </value>
                <value>
                    <fullName>New Hampshire - NH</fullName>
                </value>
                <value>
                    <fullName>New Jersey - NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Treasury_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this company is licensed on the US Treasury list</description>
        <label>US Treasury List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Appetite__c</fullName>
        <description>Preferred lines to UW</description>
        <inlineHelpText>UW appetite</inlineHelpText>
        <label>UW Appetite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UW_Appetite</valueSetName>
        </valueSet>
    </fields>
    <label>Licensing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SMARRT_Licensing</fullName>
        <columns>NAME</columns>
        <columns>UW_Appetite__c</columns>
        <columns>Account__c</columns>
        <columns>Authorized_State__c</columns>
        <columns>LOC_Required__c</columns>
        <columns>LOC_Type__c</columns>
        <columns>State_of_Domicile__c</columns>
        <filterScope>Everything</filterScope>
        <label>SMARRT Licensing</label>
    </listViews>
    <nameField>
        <displayFormat>LN-{0000000}</displayFormat>
        <label>Licensing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licensing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>